--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "tsc --watch & nodemon dist",
     "test": "jest",
     "lint": "eslint src --ext ts",
-    "tsc": "tsc"	  
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@types/node": "^9.4.2",
+    "express": "^4.16.2",
+    "serverless-http": "^1.5.3",
     "typescript": "^2.7.1"
   }
 }
