--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/jest": "^22.1.1",
     "jest": "^22.2.1",
+    "jest-mock-express": "^0.1.1",
     "supertest": "^3.0.0",
     "ts-jest": "^22.0.3"
   },
