--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ts-jest": "^22.0.3"
   },
   "dependencies": {
+    "@slack/client": "^3.16.0",
     "@types/node": "^9.4.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
