--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,7 @@ provider:
   region: eu-west-1
   environment:
     BOT_TOKEN: ${file(./env-variables.yml):botToken}
+    OAUTH_TOKEN: ${file(./env-variables.yml):oauthToken}
 
 functions:
   app:
