--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@slack/client": "^3.16.0",
+    "@types/express": "^4.11.1",
     "@types/node": "^9.4.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
